Improved appearance of card-add modal. Updated action for generating potential cards to avoid bad edge cases with duplication or out of bounds.

--- a/src/styles/components/_deck-and-discard-modal.scss
+++ b/src/styles/components/_deck-and-discard-modal.scss
@@ -1,10 +1,10 @@
-.deck__modal, .discard__modal{
+.deck__modal, .discard__modal, .add-card__modal{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 }
 
-.discard__modal__title, .deck__modal__title {
+.discard__modal__title, .deck__modal__title, .add-card__modal__title {
 	font-weight: bold;
 }
 
